--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DBConnection": "Data Source=tcp:bankingapidbserver3.database.windows.net,1433;Initial Catalog=BankingApi_db;User Id=vizkartuser@bankingapidbserver3;Password=Admin123*"
+  }
 }
